Some modifications on Calendar